Floated content inside the li will cause the height of the li to collapse. This is a targeted clearfix for these elements. The clearfix solutions should be made more general, but I'm keeping it targeted now to prevent spillover before the point release.

--- a/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
+++ b/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
@@ -199,6 +199,17 @@
   display: block;
 }
 
+.block .content ul li.views-row:after {
+  clear:both;
+  display:block;
+  visibility:hidden;
+  overflow:hidden;
+  height:0 !important;
+  line-height:0;
+  font-size:xx-large;
+  content:" x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x ";
+}
+
 /* User page - Find new friends block*/
 .block#block-commons_profile-find_new_friends {
 	overflow: visible;
